# ex4

./: Astar.cpp  Astar.h  Bfs.cpp  Bfs.h  CMakeLists.txt  Dfs.cpp  Dfs.h  Hillclimbing.cpp  Hillclimbing.h  README.md  main.cpp  makefile
Graph/: MatrixGraph.cpp  MatrixGraph.h
Graph/Algorithms/: Astar.cpp  Astar.h  BestFS.cpp  BestFS.h  Bfs.cpp  Bfs.h  Dfs.cpp  Dfs.h  Solver.h  Utilities.cpp  Utilities.h
Server/: ClientHandler.cpp  ClientHandler.h  DataReader.cpp  DataReader.h  Dispatcher.h  GraphSolvingHandler.cpp  GraphSolvingHandler.h  ParallelDispatcher.cpp  ParallelDispatcher.h  SerialDispatcher.cpp  SerialDispatcher.h  Server.cpp  Server.h  TcpServer.cpp  TcpServer.h  mevas.cpp  mevas.h
Socket/: TcpSocket.cpp  TcpSocket.h
